WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
109240
Fix TextDocumentParser to play nice with threading
https://bugs.webkit.org/show_bug.cgi?id=109240
Summary
Fix TextDocumentParser to play nice with threading
Eric Seidel (no email)
Reported
2013-02-07 16:20:34 PST
Fix TextDocumentParser to play nice with threading
Attachments
Patch
(3.43 KB, patch)
2013-02-07 16:23 PST
,
Eric Seidel (no email)
no flags
Details
Formatted Diff
Diff
Patch for landing
(3.46 KB, patch)
2013-02-07 17:27 PST
,
Eric Seidel (no email)
no flags
Details
Formatted Diff
Diff
Patch for landing
(7.45 KB, patch)
2013-02-08 11:00 PST
,
Eric Seidel (no email)
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.97 KB, patch)
2013-02-08 11:35 PST
,
Adam Barth
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Eric Seidel (no email)
Comment 1
2013-02-07 16:23:45 PST
Created
attachment 187195
[details]
Patch
Adam Barth
Comment 2
2013-02-07 16:28:29 PST
I'm not 100% sure that the line number change isn't detectable, but this approach is much cleaner.
Eric Seidel (no email)
Comment 3
2013-02-07 16:30:40 PST
This only affects the column number, and only on the first line. But I don't think the line numbers during TextDocument parsing are ever used by the rest of WebCore, even in the inspector.
Build Bot
Comment 4
2013-02-07 16:58:25 PST
Comment on
attachment 187195
[details]
Patch
Attachment 187195
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://queues.webkit.org/results/16434391
New failing tests: fast/tokenizer/text-plain.html http/tests/security/xss-DENIED-mime-type-execute-as-html.html http/tests/misc/acid3.html
Eric Seidel (no email)
Comment 5
2013-02-07 17:27:45 PST
Created
attachment 187207
[details]
Patch for landing
WebKit Review Bot
Comment 6
2013-02-07 18:33:38 PST
Comment on
attachment 187207
[details]
Patch for landing
Attachment 187207
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/16438419
New failing tests: fast/text/plain-text-line-breaks.html fast/forms/targeted-frame-submission.html fast/loader/text-document-wrapping.html
Build Bot
Comment 7
2013-02-07 18:58:15 PST
Comment on
attachment 187207
[details]
Patch for landing
Attachment 187207
[details]
did not pass mac-ews (mac): Output:
http://queues.webkit.org/results/16448010
New failing tests: fast/text/plain-text-line-breaks.html fast/forms/targeted-frame-submission.html http/tests/misc/acid3.html fast/loader/text-document-wrapping.html
Adam Barth
Comment 8
2013-02-08 10:47:20 PST
***
Bug 107330
has been marked as a duplicate of this bug. ***
Eric Seidel (no email)
Comment 9
2013-02-08 11:00:49 PST
Created
attachment 187338
[details]
Patch for landing
Adam Barth
Comment 10
2013-02-08 11:31:16 PST
Comment on
attachment 187338
[details]
Patch for landing This conflicts with the WeakPtr patch. I'll merge manually.
Adam Barth
Comment 11
2013-02-08 11:35:50 PST
Created
attachment 187342
[details]
Patch for landing
WebKit Review Bot
Comment 12
2013-02-09 09:53:56 PST
Comment on
attachment 187342
[details]
Patch for landing Clearing flags on attachment: 187342 Committed
r142363
: <
http://trac.webkit.org/changeset/142363
>
WebKit Review Bot
Comment 13
2013-02-09 09:54:00 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug